# pythonProject

./: first_project.py  new_zealand_data.xlsx  pyproject.toml
tests/: test_main.py
