[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["liam-ob <liam.obrien@atteris.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.6.1"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
Brotli = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
