[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["liam-ob <liam.obrien@atteris.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Brotli = "^1.0.9"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
